# better-dns-jumper

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
.tauri/: public.pub
src/: main.tsx  providers.tsx  routes.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: dns.rs  mod.rs  net_interfaces.rs
src-tauri/src/dns/: dns_log_store.rs  dns_rules.rs  dns_server.rs  dns_types.rs  dns_utils.rs  interface.rs  mod.rs  utils.rs
src-tauri/src/net_interfaces/: general.rs
src-tauri/src/utils/: mod.rs
src/components/: ConfirmModal.tsx  DnsRuleModal.tsx  InterfaceIp.tsx  Navigation.tsx  ServerCard.tsx  ServerModal.tsx  Titlebar.tsx  ToggleButton.tsx  Updater.tsx
src/components/Setting/: BootstrapResolver.tsx  PredefinedIps.tsx  TestDomain.tsx
src/components/icons/: Activity.tsx  Bluetooth.tsx  Broom.tsx  CircleDot.tsx  Close.tsx  Connected.tsx  (+20 more)
src/constants/: dns-servers.ts  interface.ts  updater.ts
src/data/: defaultServers.ts  defaultSetting.ts
src/hooks/: useDns.ts  useDnsLogs.ts  useDnsRules.ts  useDnsState.ts  useInterfaces.ts  useUpdater.ts
src/layouts/: DefaultLayout.tsx
src/screens/: DnsActivity.tsx  NetworkInterfaces.tsx  Servers.tsx  Setting.tsx  main.tsx
src/stores/: tauriPredefinedIpsStore.ts  tauriServersStore.ts  tauriSettingStore.ts  useAutoStartStore.ts  useDnsState.ts  useServersStore.ts
src/styles/: hero.ts  main.css
src/utils/: bootstrap.ts  interface.tsx
