[package]
name = "better-dns-jumper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "better_dns_jumper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["iphlpapi", "winerror"] }
network-interface = "2.0.3"
wmi = "0.17.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hickory-server = { version = "0.25.2", features = ["resolver"] }
hickory-client = "0.25.2"
hickory-resolver = { version = "*", features = [
    "https-aws-lc-rs",
    "webpki-roots",
] }
hickory-proto = { version = "*", features = [
    "https-aws-lc-rs",
    "webpki-roots",
] }
rustls-native-certs = "0.8.2"
rustls = "0.23.32"
url = "2.5.7"
tokio-util = "0.7.15"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
